# hsp

./: .gitmodules  .mcp.json  Cargo.toml  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
crates/hsp-broker/: Cargo.toml
crates/hsp-broker/src/: lib.rs
crates/hsp-build/: Cargo.toml
crates/hsp-build/src/: lib.rs
crates/hsp-bus/: Cargo.toml
crates/hsp-bus/src/: lib.rs  presence.rs  question.rs  ticket.rs
crates/hsp-client/: Cargo.toml
crates/hsp-client/src/: lib.rs
crates/hsp-daemon/: Cargo.toml
crates/hsp-daemon/src/: lib.rs  main.rs
crates/hsp-lsp/: Cargo.toml
crates/hsp-lsp/src/: lib.rs
crates/hsp-org/: Cargo.toml
crates/hsp-org/src/: lib.rs
crates/hsp-protocol/: Cargo.toml
crates/hsp-protocol/src/: lib.rs
crates/hsp-render/: Cargo.toml
crates/hsp-render/src/: lib.rs
crates/hsp-session/: Cargo.toml
crates/hsp-session/src/: lib.rs
crates/hsp-store/: Cargo.toml
crates/hsp-store/src/: lib.rs
crates/hsp-wire/: Cargo.toml
crates/hsp-wire/src/: broker.rs  bus_event.rs  lib.rs
hooks/: claude.json
plugins/hsp/.codex-plugin/: plugin.json
plugins/hsp/skills/csharp-lsp/: SKILL.md
plugins/hsp/skills/python-lsp/: SKILL.md
plugins/hsp/skills/rust-lsp/: SKILL.md
plugins/hsp/skills/work-session/: SKILL.md
plugins/hsp/skills/work-ticket/: SKILL.md
plugins/hsp/skills/workgroup-coordination/: SKILL.md
references/hsp-py/: .gitignore  .mcp.json  README.md  pyproject.toml
references/hsp-py/.claude-plugin/: marketplace.json  plugin.json
references/hsp-py/.codex-plugin/: plugin.json
references/hsp-py/docs/: agent-bus.md  agent-tool-roadmap.md  broker.md  csharp-dapper-fixture.md  harness-capability-matrix.md  lsp-grep.md  lsp-path.md  render-memory.md  rendering.md  tool-surface.md
references/hsp-py/hooks/: claude.json
references/hsp-py/plugins/hsp/.codex-plugin/: plugin.json
references/hsp-py/plugins/hsp/skills/csharp-lsp/: SKILL.md
references/hsp-py/plugins/hsp/skills/rust-lsp/: SKILL.md
references/hsp-py/src/hsp/: __init__.py  agent_bus.py  agent_log.py  alias_coordinator.py  babel_bridge.py  broker.py  broker_client.py  broker_lsp.py  broker_session.py  bus_event.py  bus_journal.py  bus_log.py  bus_presence.py  bus_registry.py  candidate.py  candidate_kind.py  chain_server.py  cli.py  file_move.py  file_watcher.py  lsp.py  lsp_binary.py  lsp_chain_config.py  path_finder.py  pending_buffer.py  python_refactor.py  redirect_hook.py  render_memory.py  rendering.py  router.py  server.py  warmup_stats.py  workgroup.py
references/hsp-py/tests/: test_agent_bus.py  test_agent_bus_contract.py  test_alias_coordinator.py  test_babel_bridge.py  test_broker.py  test_broker_bus.py  test_broker_lsp.py  test_broker_protocol.py  test_broker_session.py  test_broker_socket_path.py  test_broker_status.py  test_bus_event.py  test_bus_journal.py  test_bus_log.py  test_cli_log.py  test_csharp_dapper_integration.py  test_line_position.py  test_lsp_calls.py  test_lsp_fix.py  test_lsp_grep.py  test_lsp_log.py  test_lsp_move.py  test_lsp_outline.py  test_lsp_path.py  test_lsp_refs.py  test_lsp_session.py  test_lsp_types.py  test_path_finder.py  test_pending_book.py  test_pending_buffer.py  test_render_memory.py  test_rendering.py  test_router.py  test_tool_surface.py  test_workgroup.py  test_workspace_edit.py
references/hsp-py/tmp/: pylance_probe.py  roundtrip.py
src/: cli.rs  lib.rs  main.rs  mcp.rs
