[workspace]
members = [
    ".",
    "crates/hsp-broker",
    "crates/hsp-bus",
    "crates/hsp-client",
    "crates/hsp-daemon",
    "crates/hsp-org",
    "crates/hsp-protocol",
    "crates/hsp-session",
    "crates/hsp-store",
    "crates/hsp-wire",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["nuck"]
license = "MIT"

[workspace.dependencies]
hsp-broker = { path = "crates/hsp-broker" }
hsp-bus = { path = "crates/hsp-bus" }
hsp-client = { path = "crates/hsp-client" }
hsp-daemon = { path = "crates/hsp-daemon" }
hsp-org = { path = "crates/hsp-org" }
hsp-protocol = { path = "crates/hsp-protocol" }
hsp-session = { path = "crates/hsp-session" }
hsp-store = { path = "crates/hsp-store" }
hsp-wire = { path = "crates/hsp-wire" }
orgmap = { path = "../orgmap" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[package]
name = "hsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rust rewrite of the Harness Server Protocol"
license.workspace = true

[dependencies]
hsp-broker.workspace = true
hsp-bus.workspace = true
hsp-client.workspace = true
hsp-daemon.workspace = true
hsp-org.workspace = true
hsp-protocol.workspace = true
hsp-session.workspace = true
hsp-store.workspace = true
hsp-wire.workspace = true

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
