[package]
name = "hsp-broker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Broker request dispatch for HSP"

[dependencies]
hsp-bus.workspace = true
hsp-session.workspace = true
hsp-wire.workspace = true
serde_json.workspace = true
