[package]
name = "hsp-broker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Broker request dispatch for HSP"

[dependencies]
hsp-bus.workspace = true
hsp-lsp.workspace = true
hsp-render.workspace = true
hsp-session.workspace = true
hsp-store.workspace = true
hsp-wire.workspace = true
serde_json.workspace = true
