[package]
name = "hsp-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Broker session identity and registry state for HSP"

[dependencies]
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
