[project]
name = "hsp"
version = "0.15.4"
description = "Harness Server Protocol bridge from LSP servers to agent-friendly MCP tools"
readme = "README.md"
authors = [
    { name = "nuck", email = "teoxysoft@gmail.com" }
]
requires-python = ">=3.11"
dependencies = ["mcp>=1.0.0", "watchdog>=3.0.0"]

[project.scripts]
# Per-language aliases exist so each Claude Code plugin using this bridge
# invokes a visibly-distinct command — Claude Code dedupes MCP servers by
# command string and won't run two plugins that share one.
hsp = "hsp:main"
hsp-ty = "hsp:mcp_main"
hsp-csharp = "hsp:mcp_main"
hsp-redirect-hook = "hsp.redirect_hook:main"
hsp-redirect-hook-ty = "hsp.redirect_hook:main"
hsp-redirect-hook-csharp = "hsp.redirect_hook:main"
hsp-broker = "hsp.broker:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
